STOCKS-129: Refactor DTOs
Split common DTO per type into several DTOs for each endpoint's use
case. Also hide fields and make DTOs immutable.